[gd_scene load_steps=6 format=3 uid="uid://dh01oeipyytel"]

[ext_resource type="Theme" uid="uid://bvfthh0vm4fbp" path="res://resources/uiTheme.tres" id="1_6sh78"]
[ext_resource type="Script" uid="uid://bgpt7vesw7v6h" path="res://scripts/singletons/saving/exportWindow.gd" id="1_ctwya"]
[ext_resource type="Texture2D" uid="uid://b1u516lw7onna" path="res://assets/ui/saving/changePath.png" id="3_t1gom"]
[ext_resource type="PackedScene" uid="uid://sm362bc2r4fm" path="res://scenes/focusDialog/numberEdit.tscn" id="4_fimwu"]
[ext_resource type="Texture2D" uid="uid://cpllfu67xbr0h" path="res://assets/ui/settings/clarifier.png" id="4_n1hb7"]

[node name="exportWindow" type="Window"]
oversampling_override = 1.0
title = "Export Level"
position = Vector2i(0, 36)
size = Vector2i(400, 200)
transient = true
exclusive = true
unresizable = true
theme = ExtResource("1_6sh78")
script = ExtResource("1_ctwya")

[node name="c" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="c" type="MarginContainer" parent="c"]
layout_mode = 2

[node name="c" type="VBoxContainer" parent="c/c"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="c" type="HBoxContainer" parent="c/c/c"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="l" type="Label" parent="c/c/c/c"]
layout_mode = 2
text = "Export Path:"

[node name="c" type="PanelContainer" parent="c/c/c/c"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"NumberEditPanelContainer"

[node name="c" type="Control" parent="c/c/c/c/c"]
clip_contents = true
layout_mode = 2

[node name="path" type="Label" parent="c/c/c/c/c/c"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -176.0
offset_top = -8.5
offset_bottom = 8.5
grow_horizontal = 0
grow_vertical = 2
horizontal_alignment = 2

[node name="changePath" type="Button" parent="c/c/c/c"]
layout_mode = 2
theme_type_variation = &"RadioButtonText"
icon = ExtResource("3_t1gom")

[node name="c2" type="HBoxContainer" parent="c/c/c"]
layout_mode = 2

[node name="l" type="Label" parent="c/c/c/c2"]
layout_mode = 2
text = "Export Type:"

[node name="exportType" type="OptionButton" parent="c/c/c/c2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
selected = 0
item_count = 1
popup/item_0/text = "GameMaker Room File (*.room.gmx)"
popup/item_0/id = 0

[node name="c4" type="Control" parent="c/c/c"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="roomGMX" type="VBoxContainer" parent="c/c/c"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 2

[node name="c" type="HBoxContainer" parent="c/c/c/roomGMX"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="l" type="Label" parent="c/c/c/roomGMX/c"]
layout_mode = 2
text = "Room ID:"

[node name="roomIDEdit" parent="c/c/c/roomGMX/c" instance=ExtResource("4_fimwu")]
unique_name_in_owner = true
layout_mode = 2

[node name="clarifier" type="TextureRect" parent="c/c/c/roomGMX/c"]
layout_mode = 2
size_flags_vertical = 0
tooltip_text = "The index in the global.roomClear array that this room belongs to.
Usually 0 if it is unclearable.
In basegame this ranges between 0 <= x < 250"
texture = ExtResource("4_n1hb7")

[node name="c2" type="HBoxContainer" parent="c/c/c/roomGMX"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="l" type="Label" parent="c/c/c/roomGMX/c2"]
layout_mode = 2
text = "Tile ID Iterator:"

[node name="idIterStartEdit" parent="c/c/c/roomGMX/c2" instance=ExtResource("4_fimwu")]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="clarifier" type="TextureRect" parent="c/c/c/roomGMX/c2"]
layout_mode = 2
size_flags_vertical = 0
tooltip_text = "All tile instances in GameMaker have a numbered ID, starting from 1000000.
Create a new tile instance anywhere, open the .room.gmx file in a text editor, and find the tile. Set this value to its ID.
Upon exporting, this value will be updated appropriately for the next export.
We haven't tested what happens if two tile IDs conflict."
texture = ExtResource("4_n1hb7")

[node name="c3" type="Control" parent="c/c/c"]
layout_mode = 2
size_flags_vertical = 3

[node name="export" type="Button" parent="c/c/c"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"RadioButtonText"
disabled = true
text = "Export"

[node name="pathDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
oversampling_override = 1.0
title = "Export To"
initial_position = 2
mode_overrides_title = false
display_mode = 1
access = 1
use_native_dialog = true

[connection signal="close_requested" from="." to="." method="_close"]
[connection signal="pressed" from="c/c/c/c/changePath" to="." method="_changePath"]
[connection signal="item_selected" from="c/c/c/c2/exportType" to="." method="_setType"]
[connection signal="valueSet" from="c/c/c/roomGMX/c/roomIDEdit" to="." method="_roomIDSet"]
[connection signal="valueSet" from="c/c/c/roomGMX/c2/idIterStartEdit" to="." method="_idIterStartSet"]
[connection signal="pressed" from="c/c/c/export" to="." method="_export"]
[connection signal="file_selected" from="pathDialog" to="." method="_setPath"]
